# coureswork_3

./: README.md  main.py  output.py  pyproject.toml
tests/: test_change_numbers.py  test_load_file.py  test_sort_data.py
utils/: change_numbers.py  load_json_file.py  sort_data.py
