[tool.poetry]
name = "coureswork-3"
version = "0.1.0"
description = ""
authors = ["Gleb Goloborodko <glbgoloborodko@yandex.ru>"]
readme = "README.md"
packages = [{include = "coureswork_3"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
